# cpp-course-robot

./: .gitignore  CMakeLists.txt  README.md  Solver.h  Surface.h  main.cpp
Language/: LangPoint.cpp  LangPoint.h  LangSurface.cpp  LangSurface.h
Plane/: PlanarPoint.cpp  PlanarPoint.h  PlanarSurface.cpp  PlanarSurface.h
testing/: CMakeLists.txt  test.cpp
testing/tests/: dict.txt
testing/tests/lang/ans/: test1.ans
testing/tests/map/ans/: test3.ans
testing/tests/map/in/: map2.in  map4.in
utility/: boost_setup.cpp  boost_setup.h  fsort.cpp  fsort.h  lev_distance.h
